# mcp-oracle-server

./: .gitignore  MCP_CONCEPTS.md  MCP_CONCEPTS.vi.md  README.md  README.vi.md  env.example  install.bat  oracle_config.example.json  pyproject.toml  requirements.txt  run_tests.bat
src/mcp_oracle_server/: __init__.py  __main__.py  config.py  logger.py  server.py
tests/: test_server.py
