[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-oracle-server"
version = "1.0.0"
description = "A comprehensive MCP server for Oracle Database operations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "HoangLong", email = "hoanglong@example.com" }
]
keywords = ["mcp", "oracle", "database", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "oracledb>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-oracle-server = "mcp_oracle_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-oracle-server"
Repository = "https://github.com/yourusername/mcp-oracle-server.git"
Issues = "https://github.com/yourusername/mcp-oracle-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_oracle_server"]
